<resources>
    <string name="app_name">Mnemosyne</string>
    <string name="action_settings">Impostazioni</string>
    <string name="sharedPreferences_user_FILE">apontini.mnemosyne.userSharedPrefs</string>
    <string name="sharedPreferences_tasks_FILE">apontini.mnemosyne.tasksSharedPrefs</string>
    <string name="login_titleActivity">Entra in Mnemosyne</string>
    <string name="login_button">Mnemosyne Login</string>
    <string name="login_userHint">Email</string>
    <string name="login_passwordHint">Password</string>
    <string name="sharedPreferences_user_sessionid">JSESSIONID</string>
    <string name="sharedPreferences_user_mail">mail</string>
    <string name="sharedPreferences_user_psw">password</string>
    <string name="sharedPreferences_tasks_map">task-map</string>
    <string name="text_main_list">Visualizza i miei task</string>
    <string name="text_main_mic">Aggiungi un task a voce!</string>
    <string name="text_main_add">Aggiungi manualmente un task</string>
    <string name="text_list_loading">Carico la lista…</string>
    <string name="text_list_noJSON">Non ho ricevuto JSON in risposta</string>
    <string name="text_list_401">401 - La sessione non è più valida</string>
    <string name="title_activity_task_details">Dettagli</string>
    <string name="title_activity_task_list">Lista Task</string>
    <string name="text_details_constraint">Vincolo:</string>
    <string name="text_details_temporalConstr">Vincolo temporale:</string>
    <string name="text_details_normact">Azione Normalizzata:</string>
    <string name="text_details_constrPlace">Luogo vincolante:</string>
    <string name="text_details_paramName">Nome parametro:</string>
    <string name="text_details_fromtime">Dalle</string>
    <string name="tedt_details_toTime">Alle</string>
    <string name="text_details_failed">Fallito:</string>
    <string name="text_details_noConstraint">Nessun vincolo</string>
    <string name="button_details_viewPlaces">Visualizza luoghi</string>
    <string name="text_yes">Sì</string>
    <string name="text_no">No</string>
    <string name="title_activity_maps">Puoi soddisfare il task in…</string>
    <string name="title_activity_voice">Inserisci Task</string>
    <string name="text_voice_listening">Ascolto…</string>
    <string name="text_voice_button">Salva Task</string>
    <string name="text_voice_error">Qualcosa è andato storto!\nInserisci il testo manualmente</string>
    <string name="alert_noSession">Sessione scaduta o corrotta</string>
    <string name="alert_noInternetPermission">Errore, i permessi per accedere ad internet sono stati negati</string>
    <string name="alert_noPositionPermission">Sono stati negati il permessi per accedere alla posizione</string>
    <string name="alert_voice_vttNotPossible">Non è possibile effettuare il voice-to-text, inserisci il testo manualmente</string>
    <string name="alert_noRecordAudioPermission">Non è stato concesso il permesso per utilizzare il microfono</string>
    <string name="alert_noCoarsePositionPermission">Non è stato concesso il permesso per accedere alla posizione approssimativa</string>
    <string name="text_voice_waitPosition">Calcolo la tua posizione…</string>
    <string name="text_voice_waitServer">Creo il task…\n(Potrebbe metterci un po\', abbiate pietà di un Raspberry)</string>
    <string name="text_voice_retry">Reinserisci la tua richiesta</string>
    <string name="button_details_deleteTask">Elimina task</string>
    <string name="hint_voice_sentence">devo prendere, ricordami di fare…</string>
    <string name="text_voice_PRSR03">Non ho capito la frase, prova a riformularla</string>
    <string name="text_voice_PRSR04">L\'azione \'%s\' non è stata definita</string>
    <string name="text_voice_PRSR06">Il vincolo \'%s\' non è stato definito</string>
    <string name="text_voice_PRSR13">Il vincolo \'%s\' non è ancora implementato</string>
    <string name="text_voice_PRSR05">Non so dove trovare l\'oggetto \'%s\'</string>
    <string name="text_voice_PRSR11">Non è stato specificato il parametro \'%s\' definiscilo ed esegui di nuovo la richiesta</string>
    <string name="text_voice_PRSR01">Non hai specificato la frase!</string>
    <string name="text_voice_PRSR02">Lat o Lon non specificati nella richiesta</string>
    <string name="text_voice_PRSR07">Non ho trovato posti aperti per soddisfare il task all\'ora \'%s\'</string>
    <string name="text_voice_PRSR10">Il server non ha trovato luoghi per completare l\'azione, riprova tra un po\'</string>
    <string name="text_general_error">ERRORE: %s</string>
    <string name="title_activity_settings">Impostazioni</string>
    <string name="text_voice_understood">OK! Ho capito!</string>
    <string name="alert_settings_parametersChange">Attenzione: se si cambiano i parametri, i task non cambieranno e gli avvisi rimarranno sempre gli stessi, continuare?</string>
    <string name="text_settings_notDefined">Non definito</string>
    <string name="text_settings_loading">Carico…</string>
    <string name="text_settings_successUpdate">Parametro aggiornato</string>
    <string name="text_voice_PRSR11Repeat">Esegui nuovamente la richiesta</string>
    <string name="alert_settings_confirm">Sei sicuro?</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="nav_create_voice">Crea task a voce</string>
    <string name="nav_task_list">Lista Task</string>
    <string name="nav_create_manual">Crea task manualmente</string>
    <string name="voice_chip_example1">Devo prendere il latte</string>
    <string name="voice_chip_example2">Devo pagare il bollo entro le 18</string>
    <string name="voice_chip_example3">Ricordami di fare la lavatrice quando torno a casa</string>
    <string name="voice_chip_example4">Ricordami di prendere la medicina a pranzo</string>
    <string name="main_text_loading">Carico la dashboard…</string>
    <string name="alert_noInternetConnection">Connessione internet non disponibile</string>
    <string name="alert_noGoogleAPI">Errore, GoogleAPI non disponibili</string>
    <string name="service_title">Mnemosyne è attivo in background</string>
    <string name="service_descr">Mnemosyne ti notificherà periodicamente dei task da svolgere</string>
    <string name="notification_permission_description">Per favore, premi su questa notifica e garantisci i permessi</string>
    <string name="notification_googleapi_notConnected_title">Servizi Google non connessi</string>
    <string name="notification_googleapi_notConnected_descr">Impossibile connettersi ai servizi Google, prova a riavviare Mnemosyne</string>
    <string name="notification_noPositionServices_title">I servizi di localizzazione non sono abilitati</string>
    <string name="notification_noPositionServices_descr">Per favore, attivali e premi su questa notifica per riavviare il servizio</string>
    <string name="notification_settingsPosition_title">Impostazioni di posizione non corrette</string>
    <string name="notification_settingsPosition_descr">La localizzazione non è attiva o le impostazioni non sono corrette, tocca per modificare</string>
    <string name="alert_positionSettings">La localizzazione non è attiva o le impostazioni non sono corrette, vuoi modificarle?</string>
    <string name="notification_completedQuestion">L\'hai completato?</string>
    <string name="text_details_showDetails">Mostra dettagli</string>
    <string name="text_details_hideDetails">Nascondi Dettagli</string>
    <string name="alert_generalError">Errore inaspettato, riprova</string>
    <string name="alert_noConnectivitySplash">Non c\'è connettività, premi Ok per riprovare</string>
    <string name="action_next">Next</string>
    <string name="parameter_lunch">Orario Pranzo</string>
    <string name="parameter_dinner">Orario Cena</string>
    <string name="parameter_bed">Orario Letto</string>
    <string name="parameter_work">Orario di Lavoro</string>
    <string name="parameter_house">Abitazione</string>
    <string name="parameter_workplace">Luogo di Lavoro</string>
    <string name="button_set">Imposta</string>
    <string name="onboarding1_title">Benvenuto in Mnemosyne</string>
    <string name="onboarding1_helper">Prima di cominciare devo farti alcune domande</string>
    <string name="onboarding2_title">Mi serve sapere dove vivi e dove lavori</string>
    <string name="onboarding3_title">Ora mi serve sapere com\'è organizzata la tua giornata</string>
    <string name="button_begin">Inizia</string>
    <string name="onboarding4_title">Tutto sistemato</string>
    <string name="sharedPreferences_tasks_hints">task-hints</string>
    <string name="sharedPreferences_tasks_hints_lastRefresh">hints-last-refresh</string>
    <string name="sharedPreferences_tasks_hints_user">hints-user</string>
    <string name="notification_touchToDetails">Tocca per visualizzare i dettagli</string>
    <string name="psw_old_hint">Vecchia password</string>
    <string name="psw_new_1">Nuova password</string>
    <string name="psw_new_2">Conferma password</string>
    <string name="psw_button_confirm">Conferma</string>
    <string name="psw_button_cancel">Annulla</string>
    <string name="login_invalidEmail">Inserisci un indirizzo email valido</string>
    <string name="login_invalidPassword">Inserisci una password valida</string>
    <string name="login_connectedAs">Sei collegato come: %s</string>
    <string name="dashboard_taskRegistered">Task registrati</string>
    <string name="dashboard_tasksCompleted">Task completati oggi</string>
    <string name="dashboard_tasksFailed">Task falliti</string>
    <string name="error_notImplemented">Non implementato</string>
    <string name="info_removed">Rimosso</string>
    <string name="error_placeNameNotFound">Nome non trovato</string>
    <string name="error_noPlaceGiven">Nessun posto indicato</string>
    <string name="error_passwordNotMatching">Le password non corrispondono</string>
    <string name="error">Errore</string>
    <string name="info_passwordChanged">Password modificata</string>
    <string name="error_invalidTask">Task non valido</string>
    <string name="info_areYouSure">Sei sicuro?</string>
    <string name="info_taskUpdated">Task aggiornato con successo</string>
    <string name="error_taskUpdate404">Errore durante l\'update del task (404)</string>
    <string name="text_voice_extraPrompt">Dimmi cosa vuoi che ti ricordi</string>
    <string name="info_urgent">URGENTE!</string>
    <string name="info_nextTask">Come prossima cosa...</string>
    <string name="text_list_ignoredToday">Non completabile oggi</string>
    <string name="text_list_failed">Fallito: %s</string>
    <string name="text_list_completed">Completato: %s</string>
    <string name="error_nullResponse">null dal server</string>
    <string name="error_updateParameters">Non ho potuto aggiornare i parametri, codice: %d</string>
    <string name="notification_error401_descr">%s, tocca per risolvere</string>
    <string name="notification_mnemosyneForeground_stop">Non avvisarmi più</string>
    <string name="notification_urgentTask">URGENTE! %s</string>
    <string name="notification_action_completed">Completato</string>
    <string name="notification_action_snoozeMin">Ritarda (15 min)</string>
    <string name="notification_action_snoozeMax">Ritarda (1 ora)</string>
    <string name="error_commitUserSharedPrefs">Errore nel salvare i dati, riavvia l\'applicazione</string>
    <string name="error_taskUpdateGeneral">Non ho potuto aggiornare i task, codice: %d</string>
</resources>
