<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Utente">

        <Preference
            android:key="password"
            android:title="Cambia Password"
            />

        <Preference
            android:key="log_out"
            android:title="Esci"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Parametri utente">

        <Preference
            android:key="location_house"
            android:title="@string/parameter_house"
            android:icon="@drawable/ic_round_home_24px"
            android:summary="@string/text_settings_loading"
            />

        <Preference
            android:key="location_work"
            android:title="@string/parameter_workplace"
            android:icon="@drawable/ic_round_work_24px"
            android:summary="@string/text_settings_loading"
            />

        <Preference
            android:key="time_lunch"
            android:title="@string/parameter_lunch"
            android:icon="@drawable/ic_round_restaurant_24px"
            android:summary="@string/text_settings_loading"
            />

        <Preference
            android:key="time_dinner"
            android:title="@string/parameter_dinner"
            android:icon="@drawable/ic_round_restaurant_24px"
            android:summary="@string/text_settings_loading"
            />

        <Preference
            android:key="time_bed"
            android:title="@string/parameter_bed"
            android:icon="@drawable/ic_round_hotel_24px"
            android:summary="@string/text_settings_loading"
            />

        <Preference
            android:key="time_work"
            android:title="@string/parameter_work"
            android:icon="@drawable/ic_round_access_time_24px"
            android:summary="@string/text_settings_loading"
            />

    </PreferenceCategory>

</PreferenceScreen>