<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutOldPsw"
        style="@style/MnemosyneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:hintTextAppearance="@style/MnemosyneHintText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldpsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/psw_old_hint"
            android:inputType="textPassword"
            android:textColor="@color/onPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutNewPsw1"
        style="@style/MnemosyneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayoutOldPsw"
        android:layout_margin="10dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:hintTextAppearance="@style/MnemosyneHintText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newpsw1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/psw_new_1"
            android:inputType="textPassword"
            android:textColor="@color/onPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutNewPsw2"
        style="@style/MnemosyneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayoutNewPsw1"
        android:layout_margin="10dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:hintTextAppearance="@style/MnemosyneHintText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newpsw2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/psw_new_2"
            android:inputType="textPassword"
            android:textColor="@color/onPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayoutNewPsw2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/changePswButton"
            style="@style/ButtonMnemosyne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/psw_button_confirm" />

        <Button
            android:id="@+id/cancelPswButton"
            style="@style/ButtonMnemosyneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psw_button_cancel" />
    </LinearLayout>

</RelativeLayout>