<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ap.mnemosyne.activities.VoiceActivity"
    tools:showIn="@layout/activity_voice">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/text_voice_listening"
            android:textAppearance="@style/MnemosyneBodyText1"
            android:textColor="@color/onSecondary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input"
            style="@style/MnemosyneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/MnemosyneHintText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textSentence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/onPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <HorizontalScrollView
            android:id="@+id/chipView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:id="@+id/chip1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voice_chip_example1" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:id="@+id/chip2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voice_chip_example2" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:id="@+id/chip3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voice_chip_example3" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:id="@+id/chip4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voice_chip_example4" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveTaskButton"
            style="@style/ButtonMnemosyne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:focusable="true"
            android:text="@string/text_voice_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>