<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/params"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/onboarding3_title"
        android:textAlignment="center"
        android:textAppearance="@style/MnemosyneBodyText1" />

    <LinearLayout
        android:id="@+id/params"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="95"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parameter_work"
                    android:textAppearance="@style/MnemosyneBodyText2" />

                <TextView
                    android:id="@+id/work"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/MnemosyneBodyHelper" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonWork"
                style="@style/ButtonMnemosyneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/button_set" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="95"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parameter_lunch"
                    android:textAppearance="@style/MnemosyneBodyText2" />

                <TextView
                    android:id="@+id/lunch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/MnemosyneBodyHelper" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonLunch"
                style="@style/ButtonMnemosyneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/button_set" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="95"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parameter_dinner"
                    android:textAppearance="@style/MnemosyneBodyText2" />

                <TextView
                    android:id="@+id/dinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/MnemosyneBodyHelper" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonDinner"
                style="@style/ButtonMnemosyneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/button_set" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="95"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parameter_bed"
                    android:textAppearance="@style/MnemosyneBodyText2" />

                <TextView
                    android:id="@+id/bed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/MnemosyneBodyHelper" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonBed"
                style="@style/ButtonMnemosyneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/button_set" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>